# Digit-Prediction

./: Digit_Prediction.ipynb  README.md  main.py  num_reader.model  pyproject.toml
static/: canvas.js  style.css
templates/: index.html
