[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "number-prediction"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
keras = "^2.3"
python = "^3.7"
scikit-image = "^0.16.2"
opencv-python = "^4.2"
[tool.poetry.dev-dependencies]
